# tonic-demo

./: Cargo.toml  build.rs  rustfmt.toml
proto/: greet.proto
src/greeter/: client.rs  server.rs
