[package]
name = "tonic-demo"
version = "0.1.0"
authors = ["Chris Ha <chunghha@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.2"

[build-dependencies]
tonic-build = "0.2"

[[bin]]
name = "greeter-server"
path = "src/greeter/server.rs"

[[bin]]
name = "greeter-client"
path = "src/greeter/client.rs"
