[package]
name = "tonic-demo"
version = "0.1.0"
authors = ["Chris Ha <chunghha@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
tokio = { version = "1.0", features = ["full", "macros"] }
tonic = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "greeter-server"
path = "src/greeter/server.rs"

[[bin]]
name = "greeter-client"
path = "src/greeter/client.rs"
